# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  NOTES.md  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20241223194008_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscription_confirm.rs  subscriptions.rs
