[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Double brackets is toml array syntax, we can one lib unless using workspacebut multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
config = "0.14"
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
# Only used in tests not included in final binary
[dev-dependencies]
reqwest = "0.12.9"
